--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div id="results">0</div>
 
         <div id="button-grid">
-            <div id='1' class="calc-button">1</div>
-            <div id='2' class="calc-button">2</div>
-            <div id='3' class="calc-button">3</div>
-            <div id='4' class="calc-button">4</div>
-            <div id='5' class="calc-button">5</div>
-            <div id='6' class="calc-button">6</div>
-            <div id='7' class="calc-button">7</div>
-            <div id='8' class="calc-button">8</div>
-            <div id='9' class="calc-button">9</div>
-            <div id='0' class="calc-button">0</div>
+            <div id='1' class="calc-button number">1</div>
+            <div id='2' class="calc-button number">2</div>
+            <div id='3' class="calc-button number">3</div>
+            <div id='4' class="calc-button number">4</div>
+            <div id='5' class="calc-button number">5</div>
+            <div id='6' class="calc-button number">6</div>
+            <div id='7' class="calc-button number">7</div>
+            <div id='8' class="calc-button number">8</div>
+            <div id='9' class="calc-button number">9</div>
+            <div id='0' class="calc-button number">0</div>
             <div id='add' class="calc-button operator">+</div>
             <div id='subtract' class="calc-button operator">-</div>
             <div id='multiply' class="calc-button operator">*</div>
