--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id='multiply' class="calc-button operator">*</div>
             <div id='divide' class="calc-button operator">/</div>
             <div id='equal' class="calc-button operator">=</div>
-            <div id='clear' class="calc-button">AC</div>
+            <div id='cancel' class="calc-button">AC</div>
 
 
 
