--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id='1' class="calc-button number">1</div>
             <div id='2' class="calc-button number">2</div>
             <div id='3' class="calc-button number">3</div>
-            <div id='cancel' class="calc-button">AC</div>
+            <div id='cancel' class="calc-button">C</div>
 
             <div id='4' class="calc-button number">4</div>
             <div id='5' class="calc-button number">5</div>
